greengrass/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pink01
spec:
  ports:
    - name: http
      port: 8443
      targetPort: http
    - name: mqtt
      port: 8883
      targetPort: mqtt
  selector:
    name: pink01
